--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-streamlit
-pandas
-matplotlib
-numpy
+streamlit==1.28.2
+requests==2.31.0
+matplotlib==3.7.2
+numpy==1.24.3
+pandas==2.0.3
+plotly==5.17.0
+altair==5.1.2
+bokeh==3.3.0
+streamlit-aggrid==0.3.4
+streamlit-option-menu==0.3.6
+streamlit-plotly-events==0.0.6
+streamlit-lottie==0.0.5
