--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-requests
-matplotlib
-numpy
-pandas
+streamlit==1.28.2
+requests==2.31.0
+matplotlib==3.7.2
+numpy==1.24.3
+pandas==2.0.3
